--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "react-grid-layout": "^0.16.3",
     "react-modal": "^3.1.12",
     "react-tabs": "^2.2.1",
-    "geodesy": "^1.1.3"
+    "geodesy": "^1.1.3",
+    "ol": "^5.1.3"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/ieb/ieb.github.com"
   },
-  "dependencies": {}
+  "dependencies": {
+  }
 }
