--- a/package.json
+++ b/package.json
@@ -19,35 +19,35 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.9",
+    "css-loader": "^3.4.0",
     "csv-loader": "^2.1.1",
     "file-loader": "^1.1.6",
+    "geodesy": "^1.1.3",
     "html-webpack-plugin": "^2.30.1",
     "ignore-loader": "^0.1.2",
+    "js-quantities": "^1.7.4",
+    "lodash": "^4.17.15",
+    "ol": "^5.3.3",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-grid-layout": "^0.16.3",
+    "react-modal": "^3.11.1",
+    "react-tabs": "^2.3.1",
     "style-loader": "^0.19.1",
     "validator-js": "^0.2.1",
-    "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.9.2",
-    "webpack-merge": "^4.1.1",
-    "xml-loader": "^1.2.1",
-    "babel-preset-es2015": "^6.24.1",
-    "js-quantities": "^1.7.0",
-    "lodash": "^4.17.5",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-grid-layout": "^0.16.3",
-    "react-modal": "^3.1.12",
-    "react-tabs": "^2.2.1",
-    "geodesy": "^1.1.3",
-    "ol": "^5.1.3"
+    "webpack": "^4.41.4",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-merge": "^4.2.2",
+    "xml-loader": "^1.2.1"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/ieb/ieb.github.com"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
