--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.prod.js",
-    "watch": "webpack --watch --config webpack.dev.js",
-    "prepublishOnly": "npm run build"
+    "build": "parcel build src/index.html --public-url ./",
+    "watch": "parcel src/index.html",
+    "generate": "csv2json src/SolentMarksCowesWeek2018.csv src/SolentMarksCowesWeek2018.json",
+    "prepublishOnly": "rm -rf dist && npm run build"
   },
   "keywords": [
     "marine"
@@ -15,35 +16,21 @@
   "author": "Ian Boston",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-react-html-attrs": "^2.1.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^3.4.0",
-    "csv-loader": "^2.1.1",
-    "file-loader": "^1.1.6",
+    "csv2json": "^2.0.2",
     "geodesy": "^1.1.3",
-    "html-webpack-plugin": "^2.30.1",
-    "ignore-loader": "^0.1.2",
     "js-quantities": "^1.7.4",
     "lodash": "^4.17.15",
     "ol": "^5.3.3",
+    "parcel-bundler": "^1.12.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-grid-layout": "^0.16.3",
     "react-modal": "^3.11.1",
     "react-tabs": "^2.3.1",
-    "style-loader": "^0.19.1",
-    "validator-js": "^0.2.1",
-    "webpack": "^4.41.4",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-merge": "^4.2.2",
-    "xml-loader": "^1.2.1"
+    "validator-js": "^0.2.1"
   },
   "repository": {
     "type": "git",
